# defluff

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml
eval/: rubric.md  score.py  validation.jsonl
src/defluff/: __init__.py  api.py  cli.py  lexicon.py  mcp.py  patterns.py  preprocess.py  report.py
src/defluff/data/: lexicon-v1.json  patterns-v1.json
src/defluff/data/packs/: README.md  academic.txt  ai-llm.txt  corporate-linkedin.txt  crypto-web3.txt  marketing-growth.txt  pr-press-release.txt  social-media.txt  startup-vc.txt  wellness-selfhelp.txt
tests/: test_lexicon.py  test_patterns.py  test_smoke.py
